--- a/_quarto.yml
+++ b/_quarto.yml
@@ -41,6 +41,8 @@ website:
         - intro/rstudio.qmd
         - intro/project.qmd
         - intro/file.qmd
+        - text: "ファイル管理術"
+          href: intro/filesystem.qmd
         - text: "パッケージ"
           href: intro/packages.qmd
         - intro/homework.qmd
